--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
             <h2>About Me</h2>
             <div class="about-content">
                 <div class="profile-image">
-                    <img src="assets/images/profile.png" alt="sayantika">
+                    <img src="assets/image/profile.png" alt="sayantika">
                 </div>
                 <div class="about-details">
                     <p><strong>Name:</strong> Sayantika Samanta </p>
