--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             
             <div class="header-image">
-                <img src="assets/images/profile2.png.jpeg" alt="sayantika samanta" > 
+                <img src="assets/images/profile2.jpeg" alt="sayantika samanta" > 
             </div>
         </div>
     </header>
@@ -47,7 +47,7 @@
             <h2>About Me</h2>
             <div class="about-content">
                 <div class="profile-image">
-                    <img src="assets/images/profile.png.jpeg" alt="sayantika samanta">
+                    <img src="assets/images/profile.jpeg" alt="sayantika samanta">
                 </div>
                 <div class="about-details">
                     <p><strong>Name:</strong> sayantika samanta</p>
